Fixes spacing issue and new GUID
Fixes the spacing inconsistency for the buttons on the help page, and adds a unique GUID in the manifest.

--- a/src/taskpane/taskpane.css
+++ b/src/taskpane/taskpane.css
@@ -344,6 +344,7 @@ ul.form {
     justify-content: space-around;
     flex-direction: row;
     position: relative;
+    display: inline-block;
 }
 
 .styles-block {
